@@ -485,6 +485,34 @@ int EvseRapiProcessor::processCmd()
       }
       break;
 #endif // DELAYTIMER      
+
+#ifdef HEARTBEAT_SUPERVISION
+    case 'Y': // HEARTBEAT SUPERVISION
+      if (tokenCnt == 1)  { //This is a heartbeat
+        rc = g_EvseController.HsPulse(); //pet the dog
+      }
+      else if (tokenCnt == 3) { //This is a full HEARTBEAT_SUPERVISION setpoint command with both parameters
+        u2.u16 = (uint16_t)dtou32(tokens[2]);	// HS Interval in seconds.  0 = disabled
+        u1.u8 = (uint8_t)dtou32(tokens[1]);	// HS fallback current, in amperes  
+        if (u1.u16 != 0) { //Set-up new heartbeat supervision parameters 
+          rc = g_EvseController.HeartbeatSupervision(u1.u16, u2.u8); 
+        }
+        else { // This is the case where we are disabling HEARTBEAT_SUPERVISION  
+          rc = (g_EvseController.HsDeactivate() || g_EvseController.HsRestoreAmpacity());
+        }
+      }
+      else if (tokenCnt == 2) { //This is a command to ack a hearbtbeat supervison miss
+        u1.u8 = (uint8_t)dtou32(tokens[1]); //Magic cookie
+        g_EvseController.HsAckMissedPulse(u1.u8);
+      }
+      else { //Invalid number of tokens, return 1
+        rc = 1; //Invalid number of tokens
+      }
+      sprintf(buffer,"%d %d %d", g_EvseController.GetHearbeatInterval(), g_EvseController.GetHearbeatCurrent(), g_EvseController.GetHearbeatCurrent());
+      bufCnt = 1; 
+      break;
+#endif //HEARTBEAT_SUPERVISION
+
     }
     break;
 
@@ -665,6 +693,14 @@ int EvseRapiProcessor::processCmd()
       bufCnt = 1; // flag response text output
       rc = 0;
       break;
+	  
+#ifdef HEARTBEAT_SUPERVISION
+    case 'Y': // HEARTBEAT SUPERVISION
+	  sprintf(buffer,"%d %d %d", g_EvseController.GetHearbeatInterval(), g_EvseController.GetHearbeatCurrent(), g_EvseController.GetHearbeatCurrent());
+      bufCnt = 1; 
+      break;
+#endif //HEARTBEAT_SUPERVISION
+	   
     }
     break;
 
